# ml-zoomcamp

./: .dockerignore  README.md  fly.toml
01-intro/: Untitled.ipynb  homework.ipynb
03- classification/: homework.ipynb
04- evaluation/: homework.ipynb
05- deployment/: Dockerfile  README.md  churn-service.py  fast-api-server.py  fly.toml  homework.ipynb  predict.py  pyproject.toml
