[project]
name = "05-deployment"
version = "0.1.0"
description = "churn prediction service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "scikit-learn>=1.7.2",
    "unicorn>=2.1.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
